exports[`bold`] = `
<span
  data-radium={true}
  style={
    Object {
      "color": undefined,
      "fontFamily": undefined,
      "fontSize": undefined,
      "fontWeight": "bold",
      "letterSpacing": undefined
    }
  }>
  this is bold text
</span>
`;

exports[`default`] = `
<span
  data-radium={true}
  style={
    Object {
      "color": undefined,
      "fontFamily": undefined,
      "fontSize": undefined,
      "letterSpacing": undefined
    }
  }>
  this is text
</span>
`;

exports[`size, height, spacing, color`] = `
<span
  data-radium={true}
  style={
    Object {
      "color": "red",
      "fontFamily": undefined,
      "fontSize": 30,
      "letterSpacing": 2,
      "lineHeight": "20px"
    }
  }>
  this is more interesting text
</span>
`;

exports[`uppercase`] = `
<span
  data-radium={true}
  style={
    Object {
      "color": undefined,
      "fontFamily": undefined,
      "fontSize": undefined,
      "letterSpacing": undefined,
      "textTransform": "uppercase"
    }
  }>
  this is uppercased text
</span>
`;
